Add swag
