# docs/swagger.yaml
@@ -10,6 +10,36 @@ definitions:
       InsertedID:
         type: string
     type: object
+  controllers.taskType:
+    properties:
+      created_at:
+        type: string
+      duration:
+        type: string
+      first_name:
+        maxLength: 100
+        minLength: 1
+        type: string
+      hidden:
+        type: boolean
+      id:
+        type: string
+      last_name:
+        maxLength: 100
+        minLength: 1
+        type: string
+      moduleCode:
+        type: string
+      taskName:
+        type: string
+      updated_at:
+        type: string
+      user_id:
+        type: string
+    required:
+    - first_name
+    - last_name
+    type: object
   controllers.userLogin:
     properties:
       email:
@@ -143,6 +173,117 @@ paths:
       summary: Get a User by id from cache
       tags:
       - user
+  /tasks:
+    get:
+      description: Gets all tasks from the database. Represents all activities.
+      parameters:
+      - description: Authorization token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/controllers.taskType'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controllers.errorResult'
+      security:
+      - ApiKeyAuth: []
+      summary: Get all task activities
+      tags:
+      - task
+    post:
+      description: Adds task to the database
+      parameters:
+      - description: Task details
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.taskType'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.taskType'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.errorResult'
+      summary: Add a task
+      tags:
+      - task
+  /tasks/{id}:
+    get:
+      description: Gets tasks of a particular user via userId.
+      parameters:
+      - description: taskId
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Authorization token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/controllers.taskType'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controllers.errorResult'
+      security:
+      - ApiKeyAuth: []
+      summary: Get all Tasks of a particular user
+      tags:
+      - task
+    put:
+      description: Updates the task via provided taskId to be hidden.
+      parameters:
+      - description: userId
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Authorization token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.taskType'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controllers.errorResult'
+      security:
+      - ApiKeyAuth: []
+      summary: Sets a task to be hidden
+      tags:
+      - task
   /users:
     get:
       description: Gets all users from database directly. Use it to test whether cache
