# routes/task.go
@@ -9,7 +9,7 @@ import (
 // get routes for user signup and login
 func TaskRoutes(incomingRoutes *gin.Engine) {
 	incomingRoutes.GET("/tasks", middleware.Authentication(), controllers.GetAllActivity())
-	incomingRoutes.GET("/tasks/:id", middleware.Authentication(), controllers.GetTasksById())
+	incomingRoutes.GET("/tasks/:id", middleware.Authentication(), controllers.GetTasksByUserId())
 	incomingRoutes.PUT("/tasks/:id", middleware.Authentication(), controllers.UpdateHiddenStatus())
 	incomingRoutes.POST("/tasks", middleware.Authentication(), controllers.AddTask())
 }
